# CMSIS_5

./: .gitignore
BuildCMSISOnly/: CMakeLists.txt  cmake-command
CMSIS/DSP/: armac5.cmake
CMSIS/DSP/Source/: CMakeLists.txt
